# substrate-kitties-old

./: .gitignore  Cargo.toml  README.md
genesis/: demo.json
runtime/: Cargo.toml
runtime/src/: kitties.rs  lib.rs  linked_item.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
