[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-kitties'
version = '1.0.0'

[[bin]]
name = 'substrate-kitties'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.2'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.substrate_telemetry]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-telemetry'
branch = 'v1.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
branch = 'v1.0'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
branch = 'v1.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
branch = 'v1.0'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
branch = 'v1.0'

[dependencies.substrate-kitties-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'v1.0'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
branch = 'v1.0'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'v1.0'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
branch = 'v1.0'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
branch = 'v1.0'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
branch = 'v1.0'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
branch = 'v1.0'

[workspace]
members = ['runtime']